# COCOINDEX_LEARNING

./: ColPali_Quick_Start.ipynb  Dockerfile.dev  Dockerfile.jupyter  Dockerfile.lambda  README.md  claude.md  cocoindex_flow.py  docker-compose.yml  hello.py  lambda_handler.py  main.py  prepare_lambda_model.py  pyproject.toml  test_pdf_standalone.py
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: document_extraction.baml
colpali_engine/: __init__.py
colpali_engine/adapters/: image_adapter.py
colpali_engine/core/: __init__.py  baml_function_generator.py  document_adapter.py  pipeline.py  schema_manager.py
colpali_engine/extraction/: __init__.py  baml_interface.py  models.py
colpali_engine/governance/: lineage.py  validation.py
colpali_engine/lambda_utils/: model_optimizer.py
colpali_engine/outputs/: __init__.py  canonical.py  shaped.py
colpali_engine/storage/: qdrant_client.py
colpali_engine/vision/: colpali_client.py  image_processor.py
docs/: architecture-playbook.md  deployment-operations-guide.md  getting-started.md  jira-implementation-plan.md
notebooks/: tatforge_quickstart.ipynb
requirements/: base.txt  dev.txt  jupyter.txt  lambda.txt
tatforge/: __init__.py  cli.py
tatforge/adapters/: __init__.py  html_adapter.py  image_processor.py  pdf_adapter.py
tatforge/core/: baml_client_manager.py  pipeline.py  schema_manager.py  schema_validator.py  vision_model_manager.py
tatforge/extraction/: __init__.py  baml_interface.py  error_handling.py  quality_metrics.py  validation.py
tatforge/flows/: __init__.py  extraction.py  indexing.py  ops.py
tatforge/governance/: __init__.py
tatforge/lambda_utils/: __init__.py  monitoring.py  resource_manager.py
tatforge/outputs/: __init__.py  exporters.py  shaped.py
tatforge/storage/: __init__.py  qdrant_client.py
tatforge/vision/: __init__.py  colpali_client.py
tests/: README.md
tests/adapters/: test_image_processor.py  test_pdf_adapter.py
tests/core/: test_baml_function_generator.py  test_schema_manager.py  test_schema_validator.py  test_vision_model_manager.py
tests/e2e/: __init__.py  conftest.py  test_accuracy_metrics.py  test_memory_validation.py  test_pdf_integration.py  test_performance_benchmarks.py
tests/e2e/benchmark_results/: performance_baseline.json
tests/e2e/ground_truth/: 2857439.json  Bunge_loadingstatement_2025-09-25.json  CBH Shipping Stem 26092025.json  Loading-Statement-for-Web-Portal-20250923.json  Shipping-Stem-2025-09-30.json  document (1).json  extreme_multi_column.json  mixed_content_layout.json  overlapping_text.json  proper_multi_column.json  semantic_table.json  shipping-stem-2025-11-13.json  shipping_stem-accc-30092025-1.json  single_column_typography.json  tiny_fonts_spacing.json
tests/e2e/results/: accuracy_baseline.json  accuracy_report_20260115_070523.json  accuracy_report_20260115_071408.json  accuracy_report_20260115_071831.json  accuracy_report_20260115_072948.json  accuracy_report_20260115_073309.json  accuracy_report_20260115_073549.json  accuracy_report_20260115_074832.json  benchmark_report_20260115_060429.json  benchmark_report_20260115_070657.json  benchmark_report_20260115_071545.json  benchmark_report_20260115_072004.json  benchmark_report_20260115_073120.json  benchmark_report_20260115_073443.json  benchmark_report_20260115_073743.json  benchmark_report_20260115_075021.json  golden_master_baseline_20260115_060358.json  memory_optimization_report_20260115_060338.json  (+7 more)
tests/governance/: __init__.py  test_lineage.py  test_validation.py
tests/integration/: test_adapter_integration.py  test_colpali_500_integration.py  test_colpali_500_simple.py  test_colpali_600_integration.py  test_multi_adapter.py  test_multi_format_adapter.py
tests/lambda_utils/: __init__.py  test_model_optimizer.py  test_monitoring.py  test_resource_manager.py
tests/outputs/: __init__.py  test_canonical_formatter.py  test_exporters.py  test_shaped_formatter.py
tests/package/: test_package_installation.py
tests/processors/: test_image_processor.py
tests/storage/: test_qdrant_client.py
tests/unit/: test_pdf_adapter.py
tests/vision/: test_colpali_client.py
