[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tatforge"
version = "0.1.0"
description = "AI-powered document extraction - forge structured data from unstructured documents using vision AI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TAT Team"}
]
maintainers = [
    {name = "TAT Team"}
]
keywords = [
    "document-extraction",
    "vision-ai",
    "colpali",
    "baml",
    "structured-data",
    "pdf-processing",
    "qdrant",
    "cocoindex",
    "llm",
    "uv",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Text Processing :: General",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.36.0",
    "Pillow>=10.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "qdrant-client>=1.7.0",
    "baml-py>=0.215.2",
    "pdf2image>=1.16.0",
    "httpx>=0.25.0",
    "structlog>=23.2.0",
    "pyarrow>=14.0.0",
    "psutil>=5.9.0",
    "pandas>=2.0.0",
    "jsonschema>=4.0.0",
    "cocoindex>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
lambda = [
    "psutil>=5.9.0",
]
jupyter = [
    "ipywidgets>=8.0.0",
    "matplotlib>=3.8.0",
    "jupyterlab>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "PyPDF2>=3.0.0",
]
all = [
    "tatforge[lambda,jupyter,dev]",
]

[project.scripts]
tatforge = "tatforge.cli:main"

[project.urls]
Homepage = "https://github.com/Frosselet/COCOINDEX_LEARNING"
Documentation = "https://github.com/Frosselet/COCOINDEX_LEARNING/tree/main/docs"
Repository = "https://github.com/Frosselet/COCOINDEX_LEARNING"
Issues = "https://github.com/Frosselet/COCOINDEX_LEARNING/issues"

[tool.hatch.build.targets.wheel]
packages = ["tatforge"]

[tool.hatch.build.targets.sdist]
include = [
    "tatforge/**/*.py",
    "tatforge/**/*.baml",
    "README.md",
    "LICENSE",
]

# uv configuration
[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "PyPDF2>=3.0.0",
]

# Ruff configuration (fast linter from Astral - same team as uv)
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["tatforge"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
